--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 asn1crypto==0.24.0
 certifi==2018.8.24
-cffi==1.11.5
+cffi==1.14.0
 chardet==3.0.4
 cryptography==2.3.1
 Django==2.2.4
 idna==2.7
 josepy==1.1.0
 mozilla-django-oidc==1.1.2
+pkg-resources==0.0.0
 pycparser==2.18
 pycrypto==2.6.1
 pyjwkest==0.6.2
